--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: fwknop-gui
 Section: net
 Priority: optional
-Maintainer: Franck Joncourt <franck@debian.org>
+Maintainer: Franck Joncourt <franck.joncourt@gmail.com>
 Build-Depends: debhelper (>=9), cmake, libqrencode-dev, libfko3-dev, 
  libwxgtk3.0-dev, texinfo, libcurl4-openssl-dev, libgpgme11-dev, asciidoc, 
  libxml2-utils, docbook-xml, xsltproc, docbook-xsl
